<resources>
    <string name="app_name">勤務表</string>
    <string name="title_activity_maps">Maps</string>
    <string name="action_geoolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snipped">No Place found, because location Permission is disable</string>
    <string name="maps_api_key">AIzaSyCJtSwMl6hNCeN5MYP75lTGmVdzBJcOV_8</string>
    <string name="show_current_place">Show Place</string>
    <string name="send_to_server">Send to Server</string>
    <string name="oAuthClientId">204796193447-rrd5s8da5eo5vsi49c42tleh237dp326.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1593811987465006</string>
    <string name="fb_login_protocol_scheme">fb1593811987465006</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have Account</string>
    <string name="hello_world">Hello World</string>
    <string name="see_map">See Map</string>
    <string name="signup">SignUp</string>
    <string name="set">設計</string>
    <string name="fetch_day">営業日を取得しています</string>
    <string name="menu_title_header">勤務表</string>
    <string name="SaveThisMonthWorkingTime">今月の勤務表保存する</string>
    <string name="sendmail">メールを送信する</string>
    <string name="company_profile">会社概要</string>
    <string name="companyname">株式会社ユニオンテック</string>
    <string name="FaxNO">050-3397-6075</string>
    <string name="company_ph">045-717-9105</string>
    <string name="companyAddress">230-0051 神奈川県横浜市鶴見区鶴見中央4-29-17</string>
    <string name="companyEmail">kskin@union-tec.co.jp</string>
</resources>
